--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <section class="card" id="git-section">
         <h2>GIT</h2>
           <ul>
-            <li>GIT facts</li>
-            <li>GIT facts.</li>
+            <li>git status: checks what branch we are currently on</li>
+            <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           </ul>
    
       </section>
